修改窗口变小，内容溢出问题

--- a/Assessment/zhangshiru/Assessment/task1/task.html
+++ b/Assessment/zhangshiru/Assessment/task1/task.html
@@ -24,23 +24,25 @@
 				</div>
 			</div>
 			<div class="search_bar">
-				<div class="shop_wrap">
-					<img src="img/Layer-19.png">
-					<div>
-						<span>0 items in your bag</span>
-						<input type="button" name="" value="Check Out">
+				<div class="web">
+					<div class="shop_wrap">
+						<img src="img/Layer-19.png">
+						<div>
+							<span>0 items in your bag</span>
+							<input type="button" name="" value="Check Out">
+						</div>
 					</div>
-				</div>
-				<div class="header_wrap">
-					<img src="img/website.png">
-				</div>
-				<div class="search_wrap">
-					<span class="input_wrap1">
-						<input type="text" name="" placeholder="Search website">
-					</span>
-					<span class="input_wrap2">
-						<input type="button" name="">
-					</span>				
+					<div class="header_wrap">
+						<img src="img/website.png">
+					</div>
+					<div class="search_wrap">
+						<span class="input_wrap1">
+							<input type="text" name="" placeholder="Search website">
+						</span>
+						<span class="input_wrap2">
+							<input type="button" name="">
+						</span>				
+					</div>
 				</div>
 			</div>
 			<nav class="nav_bar">
