Add Telephone & QQ

--- a/Assessment/chenfang/Assignment.html
+++ b/Assessment/chenfang/Assignment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>前端作业</title>
+    <title>Assignment</title>
     <link href="CSS/CSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
