--- a/Assessment/duwanyin/assessment/task1/qinfenfeng.html
+++ b/Assessment/duwanyin/assessment/task1/qinfenfeng.html
@@ -129,52 +129,41 @@ to get the latest updates</p>
               	<li class="space1">Follow us on Twitter</li>
               	<li class="space2">Become our fan on Facebook</li>
                 <li class="space3">Connect with us on LinkedIn</li>
-                <li class="space3">Send us your email enquiries</li>
-
- 
-              </ul>
-					</div>
-				</div>
-			</div>
-			<div id="payment">
-				<img src="images/yinhang_07.png" alt="">
-			</div>
+                <li class="space3">Send us your email enquiries</li></ul>
+</div></div>
+</div>
+	<div id="payment"><img src="images/yinhang_07.png" alt=""></div>
 			</div>
 			<div id="wrap" >
 				<div class="sort">
-					<dl>
-						<dt>Sotr by:</dt>
-						<dd>
-							<h2>Ascending</h2>
-							<a href="javascript:;"></a>
-							<ul>
-								<li>menu1</li>
-								<li>menu2</li>
-								<li>menu3</li>
+				<dl>
+				<dt>Sotr by:</dt>
+	<dd><h2>Ascending</h2>
+			<a href="javascript:;"></a>
+			<ul>
+				<li>menu1</li>
+				<li>menu2</li>
+				<li>menu3</li>
 							</ul>
 						</dd>
 						<dd>
-							<h2>Product Name</h2>
-							<a href="javascript:;"></a>
-							<ul>
-								<li>menu1</li>
-								<li>menu2</li>
-								<li>menu3</li>
+		<h2>Product Name</h2><a href="javascript:;"></a>
+			<ul>
+						<li>menu1</li>
+						<li>menu2</li>
+					    <li>menu3</li>
 							</ul>
-						</dd>
-						<dd>
-							<h2>Brand Name</h2>
-							<a href="javascript:;"></a>
+						</dd><dd>
+	<h2>Brand Name</h2><a href="javascript:;"></a>
 							<ul>
-								<li class="active">menu1</li>
-								<li>menu2</li>
-								<li>menu3</li>
-							</ul>
-						</dd>
-					</dl>
-					<p>
-						<strong>Items per page:</strong>
-						<span>12</span>/<span>20</span>/<span class="color">30</span>/<span class="color">50</span>
+	<li class="active">menu1</li>
+	<li>menu2</li>
+	<li>menu3</li></ul>
+</dd>
+	</d>
+<p>
+<strong>Items per page:</strong>
+<span>12</span>/<span>20</span>/<span class="color">30</span>/<span class="color">50</span>
 					</p>
 				</div>
 			</div>
@@ -263,6 +252,67 @@ to get the latest updates</p>
           </div>
 		</div>
 	</div>
-	<div id="footer"></div>
+	
+<footer id="footer">
+        <div class="footer-search head">
+            <div class="box">
+                <img src="images/100.png" alt="100">
+                <p><a href="">Shop online with us safely 4& securely</a></p>
+            </div>
+            <div class="box">
+                <img class="box-1" src="images/box.png" alt="box">
+                <p><a href="">We ship your orders anywhere!</a></p>
+            </div>
+            <form action="">
+                <input class="text" type="text" placeholder="Search website">
+                <input class="btn" type="submit" value=" ">
+            </form>
+        </div>
+        <div class="more-information">
+            <div class="more-1">
+                <h3>Company</h3>
+                <p><a href="">Home</a></p>
+                <p><a href="">About Us</a></p>
+                <p><a href="">Blog</a></p>
+                <p><a href="">Latest News</a></p>
+                <p><a href="">Login</a></p>
+                <p><a href="">Join Us</a></p>
+            </div>
+            <div class="more-2">
+                <h3>Categories</h3>
+                <p><a href="">Lorem ipsum dolor sit</a></p>
+                <p><a href="">Amet consectetur</a></p>
+                <p><a href="">Adipiscin elit</a></p>
+                <p><a href="">Cras suscipit lacus</a></p>
+                <p><a href="">Dapibus ante mattis</a></p>
+                <p><a href="">Adipiscing nibh placerat</a></p>
+            </div>
+            <div class="more-3">
+                <h3>Information</h3>
+                <p><a href="">My Account</a></p>
+                <p><a href="">Rewards</a></p>
+                <p><a href="">Terms & Conditions</a></p>
+                <p><a href="">Buying Guide</a></p>
+                <p><a href="">FAQ</a></p>
+            </div>
+            <div class="more-3">
+                <h3>Social Network</h3>
+                <p><a href="">My Account</a></p>
+                <p><a href="">Rewards</a></p>
+                <p><a href="">Terms & Conditions</a></p>
+                <p><a href="">Buying Guide</a></p>
+                <p><a href="">FAQ</a></p>
+            </div>
+            <div class="more-5">
+                <h3>Contact Us</h3>
+                <p><a href="">Phone: 1.234.567.8901</a></p>
+                <p><a href="">Toll-Free: 1.234.567.8901</a></p>
+                <p><a href="">Fax: 1.234.567.8901</a></p>
+                <p><a href="">Email:<span>Send us an email</span></a></p>
+                <p class="more-6"><a href="">MON - SAT 9am to 7:30pm</a></p>
+                <p><a href="">Sundays, holidays closed</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
