修改了一些视觉上的BUG
就是界面看起来好看一些了

--- a/Assessment/wenjunlin/Assessment/index.html
+++ b/Assessment/wenjunlin/Assessment/index.html
@@ -86,7 +86,7 @@
 				</div>
 				<div class="right-search-box">
 					<div class="r-s-b-p">
-						<div class="r-s-inner-box">
+						<div class="r-s-inner-box1">
 							<span>查询项</span>
 							<select>
 								<option>第一项</option>
@@ -94,7 +94,7 @@
 							</select>
 						</div>
 						<div class="r-s-inner-box2">
-							<div>
+							<div class="r-s-buy-box">
 								<div class="r-s-buy">
 									<span>买方</span>
 									<select>
@@ -328,7 +328,7 @@
 						<div class="i-c-inner-box">
 							<div class="i-c-i-title">
 								<div class="i-c-i-gray">标题</div>
-								<div class="i-c-i-black">项目报表三</div>
+								<div class="i-c-i-black">项目报表三目报表三目报表三目报表三目报表三目报表三</div>
 							</div>
 							<div class="i-c-i-conctnt">
 								<div class="i-c-i-conctnt-left">
@@ -337,12 +337,12 @@
 								</div>
 								<div class="i-c-i-conctnt-right">
 									<div class="i-c-i-gray">负责人</div>
-									<div class="i-c-i-black">小A</div>
+									<div class="i-c-i-black">小A小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小AA小A小A小A小A小A小A</div>
 								</div>
 							</div>
 							<div class="i-c-i-bottom">
 								<div class="i-c-i-gray">详细描述</div>
-								<div class="i-c-i-black">该项目的负责人是</div>
+								<div class="i-c-i-black">该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是该项目的负责人是</div>
 							</div>
 						</div>
 						<div class="i-c-bottom-box">
@@ -394,7 +394,7 @@
 					</div>
 					<div class="item-func">
 						<div class="item-title">汽车行业品牌榜</div>
-						<div class="item-table-content i-t-f-c">
+						<div class="i-t-f-c">
 							<table class="table table-bordered table-condensed table-hover">
 								<thead>
 									<tr>
@@ -538,6 +538,17 @@
 							</table>
 						</div>
 					</div>
+				</div>
+				<div class="time-btn-box">
+					<div class="time-btn-icon">
+						<span class="glyphicon glyphicon-th"></span>
+					</div>
+					<div class="btn-font">
+						<span>日历</span>
+					</div>
+				</div>
+				<div class="time-btn-back">
+					<span class="glyphicon glyphicon-off"></span>
 				</div>
 			</div>
 		</div>
