--- a/Group1/dingzhenyue/任务四/任务四.html
+++ b/Group1/dingzhenyue/任务四/任务四.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
 		<meta charset="UTF-8">
 		<title>任务四</title>
@@ -7,11 +7,9 @@
 	</head>
 
 	<body>
-
 	    <div class="container">
-	        <div class="left-round">123</div>
-	        <div class="right-round">456</div>
+	        <div class="left-round"></div>
+	        <div class="right-round"></div>
 	    </div>
-
 	</body>
 </html>
