--- a/Group1/duxue/11thweeks/作业三.html
+++ b/Group1/duxue/11thweeks/作业三.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div class="all">
 <div class="team">
 <img src="images\team name.jpg">
 <div class="name">py交易</div>
@@ -40,6 +41,7 @@
 <div>
   <img src="images\8.jpg">
   <p>小姐姐4</p>
+</div>
 </div>
 
 </body>
