--- a/Group1/duxue/11thweeks/作业五.html
+++ b/Group1/duxue/11thweeks/作业五.html
@@ -1,16 +1,13 @@
-
-
-
-
 <!DOCTYPE HTML>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-<title>作业二</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<title>作业五</title>
+<link href="style3.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+<div id="con">
 <div class="head">
   <img class"logo" src="images/2.png">
     <div class="link">
@@ -62,7 +59,6 @@
 </p>     
    <p>儿子，当你把这些都加到一起时，妈妈付出的所有的爱都是免费的。看完之后，儿子的眼睛里噙满了大滴的泪水。他望着我说：“妈妈，我真的很爱你。”说着拿起笔在纸上写下了很大的几个字:“账已付清”。</p>
    <img src="images\2.jpg" width=300px;height=244px>
-  
 </div>
 
 
@@ -137,6 +133,7 @@
 </tr>
 </table>
 </div>
+</div>
 
 <div id="item">
   <h1>用户注册</h1>
@@ -178,7 +175,7 @@
          <input type="checkbox" name="habits" value="science">科学
          <br/>
           <label for"state">个人陈述</label>
-           <textarea cols="80" rows="10">这是一个多行输入框，输入您的个人陈述</textarea>
+           <textarea cols="30" rows="10">这是一个多行输入框，输入您的个人陈述</textarea>
             <div class="submit"><span>确认提交</span></div>
              </li>
   </ul>
@@ -188,6 +185,9 @@
 <footer><p>版权所有©</p></footer>
 </body>
 </html>
+
+
+
 
 
 
