--- a/Group3/chenzijin/第三次作业/task_1_6_1.html
+++ b/Group3/chenzijin/第三次作业/task_1_6_1.html
@@ -3,8 +3,133 @@
     <meta charset="UTF-8">
     <title>task_1_6_1</title>
     <link type="text/css" href="css/task_1_6_1.css" rel="stylesheet"/>
-    <script>
+    <style>
+        body,div{margin:0;padding:0;}
+        img{border:none;vertical-align:top;}
+        a{text-decoration:none;}
+        #container{
+            width:639px;
+            height:299px;
+            overflow:hidden;
+            position:relative;
+        }
+        #list{
+            width:3195px;
+            height:400px;
+            position:absolute;
+            z-index:1;
+        }
+        #list img{
+            float:left;
+            margin-left:-3px;
+        }
+        #buttons{
+            position:absolute;
+            height:10px;
+            width:100px;
+            z-index:2;
+            bottom:20px;
+            left:250px;
+        }
+        #buttons span{
+            cursor:pointer;
+            float:left;
+            border:1px solid #fff;
+            width:10px;
+            height:10px;
+            border-radius:10px;
+            background:#333;
+            margin-right:5px;
+        }
+        #buttons .on{
+            background:#d45d5c;
+        }
+        .arrow{
+            cursor:pointer;
+            display:none;
+            line-height:39px;
+            text-align:center;
+            font-size:36px;
+            font-weight:normal;
+            width:30px;
+            height:30px;
+            position:absolute;
+            z-index:2;
+            top:144px;
+        }
+        .arrow:hover{
+            font-weight:bold;
+        }
+        #container:hover .arrow{
+            display:block;
+        }
+        #prev{left:182px;color:#d45d5c;z-index:6;}
+        #next{right:182px;color:#d45d5c;z-index:6;}
+    </style>
+    <script type="text/javascript">
+        window.onload=function(){
+            var container=document.getElementById('container');
+            var list=document.getElementById('list');
+            var buttons=document.getElementById('buttons').getElementsByTagName('span');
+            var prev=document.getElementById('prev');
+            var next=document.getElementById('next');
+            var index=1;
 
+            function showButton(){//设置小圆点滚动
+                for(var i=0;i<buttons.length;i++){//让滚过的小圆点不亮，开始
+                    if(buttons[i].className == 'on'){
+                        buttons[i].className = '';
+                        break;
+                    }
+                }//让滚过的小圆点不亮，结束
+                buttons[index - 1].className='on';
+            }
+
+            function animate(offset){//无限滚动开始
+                var newLeft=parseInt(list.style.left) + offset;
+                list.style.left=newLeft + 'px';//parseInt是只取数值忽略单位
+                if(newLeft>-639){
+                    list.style.left=-1917+'px';
+                }
+                if(newLeft<-1917){
+                    list.style.left=-639+'px';
+                }
+            }//无限滚动结束
+
+            next.onclick=function(){//点击箭头事件开始
+                if(index == 5){
+                    index = 1;
+                }
+                else{
+                    index += 1;
+                }
+                showButton();
+                animate(-639);
+            }
+            prev.onclick=function(){
+                if(index == 1){
+                    index = 5;
+                }
+                else{
+                    index -= 1;
+                }
+                showButton();
+                animate(639);
+            }//点击箭头事件结束
+
+            for(var i = 0;i<buttons.length;i++){
+                buttons[i].onclick=function(){
+                    if(this.className == 'on'){
+                        return;
+                    }
+                    var myIndex=parseInt(this.getAttribute('index'));//getAttribute既可以获取自带的属性，也可以获取自定义的属性
+                    var offset=-639 * (myIndex - index);
+                    animate(offset);
+                    index=myIndex;
+                    showButton();
+                }
+            }
+        }
     </script>
 </head>
 <body>
@@ -15,7 +140,24 @@
     </header>
     <div class="top">
         <div class="top_left">
-            <img src="images/top_left.png" title="logo" alt="logo"/>
+            <div id="container">
+                <div id="list" style="left:-639px;">
+                    <img src="images/6_1.jpg" title="logo" alt="logo"/>
+                    <img src="images/top_left.png" title="logo" alt="logo"/>
+                    <img src="images/6_2.jpg" title="logo" alt="logo"/>
+                    <img src="images/6_1.jpg" title="logo" alt="logo"/>
+                    <img src="images/top_left.png" title="logo" alt="logo"/>
+                </div>
+                <div id="buttons">
+                    <span index="1" class="on"></span>
+                    <span index="2"></span>
+                    <span index="3"></span>
+                    <span index="4"></span>
+                    <span index="5"></span>
+                </div>
+                <a href="javascript:;" class="arrow" id="prev">&lt;</a>
+                <a href="javascript:;" class="arrow" id="next">&gt;</a>
+            </div>
             <div class="top_l_p_l"></div>
             <div class="top_l_p_r"></div>
         </div>
@@ -35,12 +177,12 @@
         <div class="part1">
             <h2>What</h2>
             <p>我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端
-               </p>
+            </p>
         </div>
         <div class="part2">
             <h2>When</h2>
             <p>我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端我爱前端
-                </p>
+            </p>
         </div>
         <div class="part3">
             <h2>How</h2>
@@ -80,7 +222,7 @@
         </div>
         <div class="contentTwo_right">
             <div class="c_r_top">
-               <img src="images/c_r_top1.png" title="example" alt="example" />
+                <img src="images/c_r_top1.png" title="example" alt="example" />
                 <div class="sign"></div>
                 <div class="introduce"><span>前端技术</span>前端技术前端技术</div>
             </div>
